components/updatesearch/UpdateSearch.module.css
.container {
  background-color: #fff;
  display: flex;
  justify-content: space-between;
  flex-direction: row;
}
/*input bar css*/
.inputField {
  border: none;
  outline: none; /* Remove the default focus outline */
  background-color: #eeeeee;
  min-width: 60px;
  font-weight: bold;
  font-size: 14px;
}
.inputField::placeholder {
  border: none;
  outline: none;
  color: #000;
  min-width: 60px;
  font-weight: bold;
  font-size: 14px;
}

.inputField:focus {
  border: none;
  outline: none; /* Remove the focus outline when the input is focused */
}
.Searchbar {
  transform: translateY(0);
  transition: transform 0.6s ease;
  z-index: 300;
}

.Searchbar2 {
  position: sticky;
  top: 80px;
  transition: transform 0.6s ease;
  animation: myanimation 0.6s;
  z-index: 300;
}
@keyframes myanimation {
  from {
    transform: translateY(-20%);
  }
  to {
    transform: translateY(0);
  }
}

.searchButton {
  background-color: #19c0f0;
  max-height: 50px;
  min-width: 160px;
}
.customPhoneInput {
  border: none;
  outline: none; /* Remove the default focus outline */
  background-color: #eeeeee;
  min-width: 60px;
  font-weight: bold;
  font-size: 14px;
}

.customPhoneInput::placeholder {
  border: none;
  outline: none;
  color: #a5a5a5;
  min-width: 60px;
  font-weight: bold;
  font-size: 14px;
}

/* PhoneInputCustom.module.css */
.phoneInput .PhoneInputCountry {
  display: flex;
  align-items: center;
}

@media (max-width: 768px) {
  .phoneInput {
    max-width: 300px; /* For mobile devices */
    height: 60px;
  }
}
.phoneInput
  .PhoneInputCountry
  .PhoneInputCountryIcon
  .PhoneInputCountryIconImg {
  width: 24px !important; /* Adjust the flag width */
}

.phoneInput .PhoneInputCountry .PhoneInputCountrySelect {
  background: transparent;
  width: 20px;
  font-size: 16px;
  border-right: 3px solid black;
}

